SIP-10170: fixing alignment issues

--- a/sip-web/src/app/layout/components/header/header.component.scss
+++ b/sip-web/src/app/layout/components/header/header.component.scss
@@ -177,7 +177,7 @@ header .branding-logo {
 }
 
 .product-name {
-  margin: 13px 0px 0px 20px;
+  margin: 15px 0px 0px 20px;
   color: var(--theme-primary-600);
   font-size: 15px;
   font-weight: 600;
